--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-types==0.7.0
 anyio==4.4.0
 async-timeout==4.0.3
 asyncpg==0.29.0
+bcrypt==4.1.3
 certifi==2024.7.4
 cffi==1.16.0
 click==8.1.7
@@ -19,7 +20,6 @@ httpx==0.27.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
-jwt==1.3.1
 Mako==1.3.5
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -34,6 +34,7 @@ pydantic-extra-types==2.9.0
 pydantic-settings==2.3.4
 pydantic_core==2.20.1
 Pygments==2.18.0
+PyJWT==2.8.0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
