--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ email_validator==2.2.0
 fastapi==0.111.1
 fastapi-cli==0.0.4
 greenlet==3.0.3
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -26,6 +27,7 @@ MarkupSafe==2.1.5
 mdurl==0.1.2
 nanoid==2.0.0
 orjson==3.10.6
+packaging==24.1
 passlib==1.7.4
 psycopg2-binary==2.9.9
 pycparser==2.22
